examples/tests/invalid/resource_inflight.main.w
bring cloud;

let f = inflight () => {
  new cloud.Bucket(); // Should fail because we can't create resources inflight
};